# Heimdall

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/rules/: backtest-honesty.md  canonical-schema.md  data-discipline.md  signal-certification.md
.devcontainer/: devcontainer.json
docs/: ARCHITECTURE.md  DATA_SOURCES.md  NORTH_STAR.md  OPERATIONS.md  RESEARCH_LOG.md  RESEARCH_PLAYBOOK.md  ROADMAP.md  ROADMAP_V2.md  功能說明.md
signals/: registry.json
signals/certifications/: tw-revenue-momentum_v1.json  us-fcf-yield_v1.json  us-fcf-yield_v2.json
signals/ledger/tw-revenue-momentum_v1/: 2026-07.json
signals/monitoring/: tw-revenue-momentum_v1.json
signals/specs/: tw-revenue-momentum.json  us-fcf-yield-v2.json  us-fcf-yield.json
src/heimdall/: CLAUDE.md  __init__.py
src/heimdall/analytics/: CLAUDE.md  __init__.py  big_holder.py  chips.py  earnings.py  flows.py  fundamental.py  macro.py  portfolio_opt.py  risk.py  rotation.py  sector_focus.py  technical.py
src/heimdall/backtest/: CLAUDE.md  __init__.py  demo.py  engine.py  portfolio.py  report.py  setup.py  strategies.py  sweep.py
src/heimdall/backtest/signals/: __init__.py  rsi_reversion.py  sma_crossover.py
src/heimdall/data/: CLAUDE.md  __init__.py  base.py  cache.py  router.py  schema.py  state.py  store.py  symbols.py
src/heimdall/data/providers/: __init__.py  edgar.py  finmind.py  fmp.py  form4.py  fred.py  tdcc.py  yfinance.py
src/heimdall/factors/: CLAUDE.md  __init__.py  metrics.py  panel.py  scoring.py  validate.py
src/heimdall/ops/: __init__.py  com.heimdall.weekly.plist  notify.py
src/heimdall/personas/: CLAUDE.md  __init__.py  render.py  templates.py
src/heimdall/research/: __init__.py  benchmark.py  build_dataset.py  certify.py  dataset.py  evaluate.py  finmind_crawl.py  flows_cache.py  gates.py  ledger.py  monitor.py  mops_probe.py  rebalance.py  registry.py  spec.py  tdcc_cache.py  today.py
src/heimdall/screener/: CLAUDE.md  __init__.py  build.py  engine.py  model.py  snapshot.py  store.py  universe.py
src/heimdall/ui/: CLAUDE.md  _data.py  _freshness.py  _glossary.py  _markets.py  _nav.py  _personas.py  app.py  backtest_page.py  build_page.py  chart_page.py  chips_page.py  earnings_page.py  etf_page.py  factors_page.py  flows_page.py  fundamental_page.py  glossary_page.py  help_page.py  i18n.py  macro_page.py  risk_page.py  rotation_page.py  screener_page.py  sector_page.py  technical_page.py  today_page.py  workbench_page.py
src/stockobserver/: CLAUDE.md  __init__.py
src/stockobserver/analytics/: __init__.py  macro.py  technical.py
src/stockobserver/backtest/: __init__.py  costs.py  demo.py  engine.py  report.py  setup.py  strategies.py  sweep.py
src/stockobserver/backtest/signals/: __init__.py  breakout.py  rsi_reversion.py  sma_crossover.py
src/stockobserver/data/: __init__.py  base.py  cache.py  schema.py  state.py  store.py  symbols.py
src/stockobserver/data/providers/: __init__.py  edgar.py  fmp.py  fred.py  yfinance.py
src/stockobserver/factors/: __init__.py  indicators.py  metrics.py  panel.py
src/stockobserver/personas/: CLAUDE.md  __init__.py  client.py  render.py  templates.py
src/stockobserver/screener/: __init__.py  build.py  engine.py  model.py  snapshot.py  store.py
src/stockobserver/ui/: CLAUDE.md  __init__.py  _data.py  _personas.py  app.py  backtest_page.py  chart_page.py  earnings_page.py  etf_page.py  factors_page.py  fundamental_page.py  i18n.py  macro_page.py  risk_page.py  rotation_page.py  screener_page.py  technical_page.py
tests/: CLAUDE.md  test_analytics_big_holder.py  test_analytics_chips.py  test_analytics_flows.py  test_analytics_sector_focus.py  test_backtest_known_answer.py  test_cache.py  test_earnings.py  test_edgar.py  test_finmind.py  test_finmind_crawl.py  test_fmp.py  test_form4.py  test_fred.py  test_fundamental.py  test_indicators.py  test_macro.py  test_metrics.py  test_ops_notify.py  test_panel.py  test_personas.py  test_portfolio.py  test_portfolio_opt.py  test_research_benchmark.py  test_research_canary.py  test_research_certify.py  test_research_dataset.py  test_research_evaluate.py  test_research_flows_cache.py  test_research_ledger.py  test_research_monitor.py  test_research_mops_probe.py  test_research_rebalance.py  test_research_registry.py  test_research_tdcc_cache.py  test_research_today.py  test_risk.py  test_rotation.py  test_router.py  test_scoring.py  (+13 more)
