[project]
name = "stockobserver"
version = "0.0.0"
description = "Personal stock-screening, entry/exit-timing, and strategy-backtesting platform (US-first, Taiwan-ready)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "hanruchen" }]

# Core runtime — always required. Kept deliberately small; feature areas are extras below.
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.0",
    "pyarrow>=16",
    "requests>=2.31",
    "pydantic>=2.6",
    "platformdirs>=4.2",   # OS-correct cache/data dirs
    "python-dotenv>=1.0",  # load .env for API keys
]

# Feature areas are OPTIONAL extras so you install only what a phase needs.
# Install everything for development with:  uv sync --all-extras
[project.optional-dependencies]
# Phase 1 — free data providers (no paid keys).
data = [
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "requests-cache>=1.2",
]
# Phase 2/3 — backtesting engines + indicators.
backtest = [
    "vectorbt>=0.26",   # single-strategy signals + parameter sweeps (Numba-vectorized)
    "bt>=1.1",          # portfolio rebalancing / rotation
    "pandas-ta>=0.3.14b",  # pure-Python indicators (see note: pandas-ta-classic fork is the maintained one)
]
# Phase 3/5 — factor + portfolio + risk analytics and reporting.
analytics = [
    "alphalens-reloaded>=0.4.3",
    "quantstats>=0.0.62",
    "pyportfolioopt>=1.5.5",
    "riskfolio-lib>=6.0",
]
# Phase 1+ — Streamlit UI and charts.
ui = [
    "streamlit>=1.35",
    "plotly>=5.22",
]
# OPTIONAL AI report layer (Phase 4+). The quant core NEVER imports this.
# Only needed if you want the analyst-persona narrative reports.
personas = [
    "anthropic>=0.34",
]

[dependency-groups]
# Dev tooling — installed via `uv sync` by default (PEP 735 groups).
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockobserver"]

# ----------------------------------------------------------------------------
# Tooling config
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PD"]  # pyflakes, pycodestyle, isort, pyupgrade, bugbear, simplify, pandas-vet

[tool.mypy]
python_version = "3.12"
packages = ["stockobserver"]
strict = true
plugins = ["pydantic.mypy"]

# Genuinely untyped third-party libs — treat as Any (don't follow their source,
# so strict mode doesn't flag their untyped calls). pandas/numpy are typed
# (numpy ships py.typed; pandas via the pandas-stubs dev dep).
[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "vectorbt.*",
    "quantstats.*",
    "pandas_ta.*",
    "fredapi.*",
    "duckdb.*",
    "streamlit.*",
    "plotly.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# UI is a thin Streamlit shell over typed core modules; Streamlit's decorators are
# untyped, so strict-checking it is noise. Logic lives in (type-checked) core.
[[tool.mypy.overrides]]
module = ["stockobserver.ui.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
