[project]
name = "heimdall"
version = "0.0.0"
description = "Personal stock-screening, entry/exit-timing, and strategy-backtesting platform (US-first, Taiwan-ready)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "hanruchen" }]

# Core runtime — always required. Kept deliberately small; feature areas are extras below.
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.0",
    "pyarrow>=16",
    "requests>=2.31",
    "pydantic>=2.6",
    "platformdirs>=4.2",   # OS-correct cache/data dirs
    "python-dotenv>=1.0",  # load .env for API keys
]

# `personas` is the one genuinely optional feature: heimdall.ui._personas imports
# it lazily and gates it behind ANTHROPIC_API_KEY, so it never needs to be present
# for the app to boot. Everything else the app needs to run lives in
# [dependency-groups] below, not here — see the note on [tool.uv] for why.
[project.optional-dependencies]
# OPTIONAL AI report layer (Phase 4+). The quant core NEVER imports this.
# Only needed if you want the analyst-persona narrative reports.
personas = [
    "anthropic>=0.34",
]

[dependency-groups]
# Dev tooling — installed via `uv sync` by default (PEP 735 groups).
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "pre-commit>=3.7",
]
# Phase 1 — free data providers (no paid keys).
data = [
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "requests-cache>=1.2",
]
# Phase 2/3 — backtesting engines + indicators.
backtest = [
    "vectorbt>=0.26",   # single-strategy signals + parameter sweeps (Numba-vectorized)
    "bt>=1.1",          # portfolio rebalancing / rotation
    "pandas-ta>=0.3.14b",  # pure-Python indicators (see note: pandas-ta-classic fork is the maintained one)
]
# Phase 3/5 — factor + portfolio + risk analytics and reporting.
analytics = [
    "alphalens-reloaded>=0.4.3",
    "quantstats>=0.0.62",
    "pyportfolioopt>=1.5.5",
    "riskfolio-lib>=6.0",
]
# Phase 1+ — Streamlit UI and charts.
ui = [
    "streamlit>=1.35",
    "plotly>=5.22",
]

[tool.uv]
# `ui/app.py` eagerly imports every page at startup (backtest, factors, ETF, macro,
# rotation…), so data+backtest+analytics+ui are hard requirements just to boot the
# app, not a la carte extras. They're modeled as dependency groups (not
# optional-dependencies) and set as default groups so a BARE `uv sync` installs
# them — because Streamlit Community Cloud's native uv.lock support runs exactly
# that (bare `uv sync`, no --extra/--all-extras) and prioritizes uv.lock over any
# requirements.txt. See README "Deploying" for the full story.
# Lean CLI-only install: `uv sync --no-default-groups --group data`.
default-groups = ["dev", "data", "backtest", "analytics", "ui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdall"]

# ----------------------------------------------------------------------------
# Tooling config
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PD"]  # pyflakes, pycodestyle, isort, pyupgrade, bugbear, simplify, pandas-vet

[tool.ruff.lint.per-file-ignores]
# Long-form bilingual help prose — wrapping it mid-sentence would hurt readability.
"src/heimdall/ui/help_page.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["heimdall"]
strict = true
plugins = ["pydantic.mypy"]

# Genuinely untyped third-party libs — treat as Any (don't follow their source,
# so strict mode doesn't flag their untyped calls). pandas/numpy are typed
# (numpy ships py.typed; pandas via the pandas-stubs dev dep).
[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "vectorbt.*",
    "quantstats.*",
    "pandas_ta.*",
    "fredapi.*",
    "duckdb.*",
    "streamlit.*",
    "plotly.*",
    "bt.*",
    "alphalens.*",
    "pypfopt.*",
    "riskfolio.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# UI is a thin Streamlit shell over typed core modules; Streamlit's decorators are
# untyped, so strict-checking it is noise. Logic lives in (type-checked) core.
[[tool.mypy.overrides]]
module = ["heimdall.ui.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
